update template for AST

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2015 by Daniel R. Driver.
+% Copyright (c) 2018 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -11,40 +11,68 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
+%\onlinetrue % \Int{true}{false}
 \coursecode[2.1]{BSTH tk}% version is 1.0 unless \cmd[1.1]{}
 \coursetitle{tk}% optional series: \cmd[series]{}
 
+% Taught in:
+%   - Fall 2018
+
 \professor{Daniel R. Driver}% terminal degree is PhD unless \cmd[DPhil]{}
-\phone{416.226.6620 x2201}
-\email{ddriver@tyndale.ca}
-\officehours{Mon. \& Wed., 1:30--3:30 \PM}
+\phone{902-425-7051}
+\email{ddriver@astheology.ns.ca}
+\officehours{Tuesdays, 2:00--4:00 \PM}
 
-\semester{Winter 2015}
-\meets{Mondays \& Wednesdays}% \meets{on}{at}{in}
+\semester{Fall Term 2018}
+\meets{Mondays}% \meets{on}{at}{in} ; on could = \Int{Thursdays}{Tuesdays}
       {8:15--9:35 \AM}
-      {Ballyconnor 2087}
-\website{classes.tyndale.ca}% omit http://
-\cdescription{% copy from tyndale.ca/registrar/calendar
-
-	Survey of the redemptive story in the three major divisions of the
-	Old Testament (the Law/Torah, the Prophets, and the Writings),
-	including an orientation to the historical backgrounds, religious
-	context, literary forms, apocryphal dimensions, prophetic elements,
-	matters of canon, text, interpretation, and critical issues.
-
-	{\itshape Note that this class is both a general studies requirement
-	and a prerequisite for advanced courses in Biblical Studies \&
-	Theology.}
-
+      {Classroom 3}
+\website{danieldriver.com}% omit http://
+\cdescription{% copy from the current Academic Calendar
+	The First Testament of Christian Scripture, also called the \ldots
 }% end of course description
+\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+By the end of the course students should be able to:
+	name;
+	give;
+	contrast;
+	locate;
+	understand;
+	recognize;
+	list;
+	articulate;
+	defend;
+	classify;
+	report on;
+	memorize.
 
-\input{\incl/preamble}
+Students should also be able to \ldots
 
-\begin{document}
-\input{\incl/title}
 
-\section{Learning Outcomes}
-\label{outcomes}
+% ATS-AST Goals and Assessment Tool
+%
+% 1. Substantial grounding in critical analytical skills central to
+% theological disciplines and their contemporary practice: biblical,
+% theological, pastoral;
+%
+% 2. Cultivate excellence in practices of communicating faith that
+% bridge traditional and contemporary styles, genres, and media;
+%
+% 3. Inculcating habits of bringing critical self-awareness and
+% social-awareness to pastoral leadership, fostering virtues crucial in
+% times of foundational change such as, ingenuity, compassion and
+% courage;
+%
+% 4. Nurture a committed love of learning and spiritual formation
+% understood as integral to pastoral professional practice.
+%
+% Religious Heritage (Standard A, Section 3.1.1), Cultural Context
+% (Standard A, Section 3.1.2), Personal and Spiritual Formation
+% (Standard A, Section 3.1.3), and Capacity for Ministerial and Public
+% Leadership (Standard A, Section 3.1.4)
+%
+% Rubric for Assessment: Needs Work; Satisfactory; Doing Well
+
 
 % A Model of Learning Objectives
 % Adapted from http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
@@ -99,80 +127,124 @@
 %
 % If you reference a List of Measurable Verbs Used to Assess Learning
 % Outcomes, remember that A&K reverse Bloom's 6th and 5th categories.
+}% end of learning objectives
 
-The learning outcomes for this course are in part a function of each
-student's ability to meet specific goals (learning objectives). By the
-end of the course students should be able to:
-	name;
-	give;
-	contrast;
-	locate;
-	understand;
-	recognize;
-	list;
-	articulate;
-	defend;
-	classify;
-	report on;
-	memorize.
+\input{\incl/preamble}
 
-Students should also be able to \ldots
+\begin{document}
+\input{\incl/title}
+
+\section{Learning Objectives}
+\label{objectives}
+
+\edobject
 
 \section{Required Texts \& Materials}
 \label{texts}
 
-All required textbooks are available in the Tyndale Bookstore. The
-coursepack is available in class, directly from Dr. Driver.
+The following texts are required. Students are strongly encouraged to
+purchase their own copies. Library copies that are not reference works
+have been placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Heschel}% use the longest item in the bibliography
+\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with
-	Apocrypha: New Revised Standard Version}. Oxford: Oxford University
-	Press, 2010 (4\textsuperscript{th} edition). Many serviceable
-	translations of the Bible exist, but the NRSV is a standard among
-	biblical scholars. If you do not already have a copy then you must
-	purchase one for this class.
+	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
+    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
+    Oxford / New York: Oxford University Press, 2010.
+    ISBN 978-0195289602.
 
-	\bibitem[Heschel]{heschel} Abraham Joshua Heschel. \emph{The
-	Sabbath: Its Meaning for Modern Man}. New York: Farrar, Straus and
-	Giroux, 1951 (repr. 2005). Read this classic example of
-	20\textsuperscript{th} century Jewish spirituality on your own, no
-	later than the fourth week of class. Review it in preparation for
-	the class on which it is assigned.
+	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
+	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
+	Nashville: Abingdon Press, 2015.
+	ISBN 978-1426775635.
 
-	\bibitem[Moberly]{moberly} R.\,W.\,L. Moberly. \emph{Old Testament
-	Theology: Reading the Hebrew Bible as Christian Scripture}. Grand
-	Rapids: Baker Academic, 2013. Read these eight essays by a leading
-	Old Testament scholar and biblical theologian in parallel with (but
-	after completing) the assigned Bible readings.
+	\bibitem[Heschel]{heschel} Abraham Heschel.
+	\emph{The Sabbath: Its Meaning for Modern Man}.
+	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
+	ISBN 978-0374529758.
 
-	\bibitem[OTSIC]{otsic} Daniel R. Driver. \emph{\ctitle\ Introductory
-	Coursepack}. Toronto, \csemester. In response to the requests of
-	many students I have compiled a pack of notes for my lectures. I
-	will circulate the relevant pages before each class. It behooves you
-	to gather, annotate, and study this material carefully.
+	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
+	\emph{On the Apostolic Preaching}.
+	Trans. John Behr.
+	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
+	ISBN 978-0881411744.
 
 \end{thebibliography}
 \endgroup
 
+An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
+Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
+(Oxford / New York: Oxford University Press, 2014). A reference copy is
+available in the library, and it is well worth consulting.
+
 \section{Supplementary Texts}
 \label{supplementary}
 
-Supplementary readings are listed in the bibliographies that follow each
-page of notes in the coursepack. Excerpts from this literature,
-ordinarily an article or a book chapter per week, will be available for
-download through the course website (alternately, some may be placed on
-reserve in the library). Students are not strictly required to read this
-supplementary material; then again, students who choose not to read it
-should not expect to get an A for the course.
+Supplementary readings will be recommended throughout the semester.
+Excerpts from this literature, ordinarily an article or a book chapter
+per week, will either be placed on reserve or made available for
+download through the course website.
 
-Note that the required readings for this survey emphasize a selection of
-primary texts from the Old Testament. Reading in the vast body of
-secondary literature on the Bible is largely left for upper-division
-courses. Diligent students, however, and all prospective majors, will
-make a special point of reviewing the supplementary articles.
+Students are not strictly required to read this additional material;
+then again, students who choose not to read it should not expect to
+receive an ``A'' for the course. Stated more positively, these
+selections represent some of the best contemporary readers of the HB/OT,
+and you will not want to miss out on their hermeneutical and theological
+insights.
+
+\section{Course Outline}
+\label{outline}
+
+We will adhere to the schedule in \autoref{schedule} as closely as
+possible, though the professor reserves the right to adjust it to suit
+the needs of the class.
+
+\newcommand\HBFB[1]{\cite[#1]{hbfb}}
+
+\setcolumncount{5}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\begin{table}[htbp]% set to `p' to put the schedule on its own page
+  \centering
+  \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
+	\toprule
+	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pgs)}&\textbf{Supplement (author)}&\textbf{Due}\\
+	\midrule
+
+	\unit{Law / Torah / Pentateuch} \\
+
+		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{12} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{19} Sep. \\
+		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{26} Sep. \\
+		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 3} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{10} Oct. \\ [1ex]
+
+	\unit{Prophets: Former \textit{\&} Latter} \\
+
+	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
+		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{17} Oct. \\
+		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{24} Oct. \\
+	\noclass{Term Break (Monday to Friday)}                              & \Int{2 Nov.}{31 Oct.} \\
+		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 7} Nov. \\ [1ex]
+
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{14} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{21} Nov. \\ [1ex]
+
+	\unit{Writings: Wisdom \textit{\&} Praise} \\
+
+	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{}   \\
+		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{28} Nov. \\
+		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{ 5} Dec. \\ [1ex]
+
+	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
+
+	\bottomrule
+  \end{tabular}
+  \caption{Schedule of Readings}
+  \label{schedule}
+\end{table}
+
+See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
 
 \section{Evaluation}
 \label{evaluation}
@@ -180,151 +252,95 @@ make a special point of reviewing the supplementary articles.
 \subsection{Grade Structure for \ccode}
 \label{structure}
 
-% Please consider the following structure in your course. Evaluation
-% should be clearly linked to Learning Outcomes.
-%   - Some form of meaningful evaluation should occur during the first 4
-%     weeks of the course; **all students should (and first-year
-%     students must) receive an indication of their performance in the
-%     first half of the course.**
-%   - **Plan your assignments so that each can be returned to students
-%     before the next is due.**
-%   - Most courses should have a rigorous final exam of 2--3 hours
-%     duration. Some upper-year courses may not require a final,
-%     depending on pedagogical design and assessment strategy. **Final
-%     exams should be appropriately demanding in both breadth and depth
-%     to assess accurately the achievement of learning outcomes.**
-%   - **No assignments should be due in the last week of classes; final
-%     examinations will be scheduled only by the Registrar’s Office.**
+% ATS-AST Goals and Assessment Tool
+%
+% 1. Substantial grounding in critical analytical skills central to
+% theological disciplines and their contemporary practice: biblical,
+% theological, pastoral;
+%
+% 2. Cultivate excellence in practices of communicating faith that
+% bridge traditional and contemporary styles, genres, and media;
+%
+% 3. Inculcating habits of bringing critical self-awareness and
+% social-awareness to pastoral leadership, fostering virtues crucial in
+% times of foundational change such as, ingenuity, compassion and
+% courage;
+%
+% 4. Nurture a committed love of learning and spiritual formation
+% understood as integral to pastoral professional practice.
+%
+% Religious Heritage (Standard A, Section 3.1.1), Cultural Context
+% (Standard A, Section 3.1.2), Personal and Spiritual Formation
+% (Standard A, Section 3.1.3), and Capacity for Ministerial and Public
+% Leadership (Standard A, Section 3.1.4)
+%
+% Rubric for Assessment: Needs Work; Satisfactory; Doing Well
 
 \begin{enumerate}
 
-	\item At various points throughout the semester I will announce
-	\textbf{reading quizzes}. They are designed to ensure that you have
-	read the assigned material carefully, and may be administered online
-	(outside of class) or on paper (in class). Online quizzes are open
-	book, but they are timed and limited to a single attempt. Quizzes
-	given in class are closed book, and they may not be made up in the
-	case of absence.
+	\item I will set \textbf{reading prompts} throughout the semester.
+	They are designed to ensure that you have read the assigned material
+	carefully, and to help you explore its significance. Prompt
+	responses submitted online should be between 250 and 300 words long.
 
-	\item Students are to \textbf{memorize Psalm 8} in the King James
-	Version (KJV) and recite it to me privately, in my office, in the
-	fourth or fifth week of class. An online sign-up sheet will be
-	posted to the class website in week three.
+%	\item Students are to \textbf{memorize ten verses from the Psalms}
+%	in the King James Version and recite them to me privately by the
+%	last day of class. You may select ten verses from one psalm, one
+%	verse from ten psalms, or any combination in between.
 
-	\item A \textbf{midterm exam} will be given in class as scheduled in
-	the course outline (Section~\ref{outline}). At the instructor's
-	option, it may include a take-home writing component.
+	\item Two \textbf{short papers} will facilitate student reflection
+	on two extended works of biblical interpretation, one by
+	\cite{heschel} and one by \cite{irenaeus}. Each should be 3,000
+	words long. They are due on the sixth and eleventh days of class,
+	respectively.
 
-	\item A comprehensive \textbf{final exam} will be held during the
-	exam period as schedule by the Registrar (see Section~\ref{exams}).
-	It is designed to assess learning outcomes, i.e., your attainment of
-	the objectives in Section~\ref{outcomes}. Test your readiness for
-	the final by asking yourself how well you can perform the tasks
-	outlined in those paragraphs.
+	\begin{enumerate}
+
+		\item The \textbf{first paper} will articulate and evaluate
+		multiple rationales for sabbath observance by interacting with
+		biblical and post-biblical traditions. The latter must include,
+		but need not be limited to, Heschel's \emph{The Sabbath}.
+
+		\item The \textbf{second paper} will explore Irenaeus' use of
+		the Old Testament as Christian scripture by: succinctly
+		summarizing \emph{On the Apostolic Preaching}, selecting a
+		characteristic example of biblical interpretation in that work,
+		and then developing and defending a coherent thesis about that
+		instance of interpretation.
+
+	\end{enumerate}
+
+\Int{
+	\item Each student will \textbf{make an online presentation} \ldots
+}{
+	\item Each student will \textbf{lead a seminar} on \ldots
+}
 
 \end{enumerate}
 
-The breakdown for the semester's total work is as follows:
+The breakdown for the semester's total work is shown in
+\autoref{grade-dist}.
 
 \begin{table}[htbp]
   \centering
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Quizzes & 25\% \\
-    Memorization    & 15\% \\
-    Midterm Exam    & 30\% \\
-    Final Exam      & 30\% \\
+    Reading Prompts & 25\% \\
+%    Memorization    & 10\% \\
+    First Paper     & 25\% \\
+    Second Paper    & 25\% \\
+    \Int{Online}{Seminar} Presentation & 25\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
-  \label{distribution}
+  \label{grade-dist}
 \end{table}
 
 \input{\policy/grades}
+\input{\policy/other}
 
-\section{Policy on Assignments \& Exams}
-\label{policy}
-
-\input{\policy/academic_calendar}
-\input{\policy/assignments}
-\input{\policy/exams}
-
-\section{Student Expectations \& Guidelines}
-\label{expectations}
-
-\input{\policy/academic_integrity}
-\input{\policy/attendance}
-\input{\policy/technology}
-
-\input{\policy/support}
-
-\section{Course Outline}
-\label{outline}
-
-Readings should be completed before the start of the class for which
-they are assigned. Primary readings (from scripture) and required
-secondary texts (Heschel and Moberly) are compulsory. Any supplementary
-readings that I circulate (per Section~\ref{supplementary}) will be
-keyed to the session number (listed under \textbf{\S} in
-Table~\ref{schedule}), and should ideally be read before class as well.
-We will adhere to the schedule as closely as possible, though I reserve
-the right to adjust it to suit the needs of the class.
-
-\setcolumncount{4}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
-\begin{table}[htb]% add p to put the schedule on its own page
-  \centering
-  \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
-	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
-	\midrule
-	\unit{One} \\
-	&                                           &                           &  5 Jan.     \\
-	&                                           &                           &  7 Jan.     \\
-	&                                           &                           & 12 Jan.     \\
-	&                                           &                           & 14 Jan.     \\
-	&                                           &                           & 19 Jan.     \\
-	&                                           &                           & 21 Jan.     \\ [1ex]
-	\unit{Two} \\
-	&                                           &                           & 26 Jan.     \\
-	&                                           &                           & 28 Jan.     \\
-	&                                           &                           &  2 Feb.     \\
-	&                                           &                           &  4 Feb.     \\
-	&                                           &                           &  9 Feb.     \\
-	&                                           &                           & 11 Feb.     \\
-	\noclass{Reading Week}                                                        & 16--20 Feb. \\
-	&                                           &                           & 23 Feb.     \\
-	&                                           &                           & 25 Feb.     \\
-	&                                           &                           &  2 Mar.     \\
-	&                                           &                           &  4 Mar.     \\
-	&                                           &                           &  9 Mar.     \\
-	&                                           &                           & 11 Mar.     \\
-	&                                           &                           & 16 Mar.     \\
-	&                                           &                           & 18 Mar.     \\
-	&                                           &                           & 23 Mar.     \\
-	&                                           &                           & 25 Mar.     \\
-	&                                           &                           & 30 Mar.     \\
-	&                                           &                           &  1 Apr.     \\
-	\noclass{Reading Days}                                                  & 6--7 Apr.   \\
-	\reminder{\textbf{Final Exam} (as schedule by the Registrar)}{8--15 Apr.} \\
-	\bottomrule
-  \end{tabular}
-  \caption{Schedule of Readings}
-  \label{schedule}
-\end{table}
-
-See the Registrar's website for a list of other
-\href{http://www.tyndale.ca/registrar/important-dates}{important dates}.
-The last day to add a class, or to drop one without penalty, is
-ordinarily the end of the term's second week.
-
-\section{Course Bibliography}
-\label{bibliography}
-
-An introductory bibliography is provided at the end of each page of
-notes in the coursepack. Pursue this material as your interest dictates,
-or if you wish to check my handling of any of the material I present.
-Pay special attention to items flagged as supplementary reading
-(Section~\ref{supplementary}).
+%\section{Course Bibliography}
+%\label{bibliography}
 
 \end{document}
