--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[2.1]{BSTH tk}% version is 1.0 unless \cmd[1.1]{}
+\coursecode[1.0]{HB tk}% version is 1.0 unless \cmd[1.1]{}
 \coursetitle{tk}% optional series: \cmd[series]{}
 
 % Taught in:
@@ -24,14 +24,17 @@
 \officehours{Tuesdays, 2:00--4:00 \PM}
 
 \semester{Fall Term 2018}
-\meets{Mondays}% \meets{on}{at}{in} ; on could = \Int{Thursdays}{Tuesdays}
-      {8:15--9:35 \AM}
+\meets{Mondays}% \meets{on}{at}{in} ; can nest \Int{Thursdays}{Tuesdays}
+      {9:00--11:30 \AM}
       {Classroom 3}
-\website{danieldriver.com}% omit http://
-\cdescription{% copy from the current Academic Calendar
-	The First Testament of Christian Scripture, also called the \ldots
+\website{danieldriver.com/courses/}% omit http://
+\cdescription{% \cmd[special prereqs]{copy from the current Academic Calendar}
+
+The First Testament of Christian Scripture, also called the \ldots
+
 }% end of course description
 \objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+
 By the end of the course students should be able to:
 	name;
 	give;
