--- a/includes/title.tex
+++ b/includes/title.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{title.tex}[2017/09/11 v2.0 -- Syllabus title page]
+\ProvidesFile{title.tex}[2018/05/24 v2.1 -- Syllabus title page]
 
 \begin{titlepage}
   \begin{center}
@@ -44,7 +44,9 @@
   \section{Course Description}
   \label{description}
 
-  \emph{From the Academic Calendar:} \cdescrip
+  \cdescrip
+  
+  \emph{Prerequisites: \lining\cprereqs.}
 
 %  \section{Learning Objectives}
 %  \label{objectives}
