update supplementary texts w/ resources

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -177,25 +177,41 @@ have been placed on a 2-hour reserve.
 \end{thebibliography}
 \endgroup
 
-An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
+A very fine alternative study Bible is the NJPS: Adele Berlin and Marc
 Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford / New York: Oxford University Press, 2014). A reference copy is
-available in the library, and it is well worth consulting.
+(Oxford: Oxford University Press, 2014).
 
 \section{Supplementary Texts}
 \label{supplementary}
 
-Supplementary readings will be recommended throughout the semester.
-Excerpts from this literature, ordinarily an article or a book chapter
-per week, will either be placed on reserve or made available for
-download through the course website.
+Supplementary readings may be recommended throughout the semester.
+Excerpts from this literature will either be placed on reserve or made
+available through the course website.
 
-Students are not strictly required to read this additional material;
-then again, students who choose not to read it should not expect to
-receive an ``A'' for the course. Stated more positively, these
-selections represent some of the best contemporary readers of the HB/OT,
-and you will not want to miss out on their hermeneutical and theological
-insights.
+In addition, the following reference works are worth owning and
+consulting. First, \cite{rlgs} includes sound advice on things like
+reading religious texts, writing essays and book reviews, making oral
+presentations, and learning languages. Second, \cite{sbl2} is a standard
+reference in the field, useful to beginning students and specialists in
+biblical studies alike.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{1}% use the longest item in the bibliography
+
+	\bibitem{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}. 2nd ed.
+	Oxford: OUP, 2015. % ISBN 978-0199010349.
+
+	\bibitem{sbl2} Collins, Billie Jean, et al.
+	\emph{The SBL Handbook of Style}. 2nd ed.
+	Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
+	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
+	which is the general standard at AST, there is also a free
+	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
+
+\end{thebibliography}
+\endgroup
 
 \section{Course Outline}
 \label{outline}
