tighten up texts, schedule, policy re style

--- a/HB/HB 3114-The XII-Driver 2018.tex
+++ b/HB/HB 3114-The XII-Driver 2018.tex
@@ -193,6 +193,35 @@ the needs of the class.
   \label{schedule}
 \end{table}
 
+\setcolumncount{3}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
+\begin{table}[htbp]% add p to put the schedule on its own page
+  \centering
+  \begin{tabular}{>{\sessioncount.}r@{ }lr}% make sure the column config agrees with \setcolumncount
+	\toprule
+	\sessionskip{\textbf{\S.}}&\textbf{Seminar Text} (Commentaries follow suit)&\textbf{Date}\\
+	\midrule
+		& None: Introductions, overview of The XII &  9 Jan. \\
+		& The entire Book of the XII, from Hosea to Malachi & 16 Jan. \\
+		& Jonah 1–2                                         & 23 Jan. \\
+		& Jonah 3–4                                         & 30 Jan. \\
+	\reminder{Review Essay 1: Due by the end of Week Four}{2 Feb.} \\
+		& Snow day: no class                                &  6 Feb. \\
+		& Micah 1–3                                         & 13 Feb. \\
+	\noclass{Reading Week}                                  & 20 Feb. \\
+		& Micah 4–5                                         & 27 Feb. \\
+		& None: Attend Grad Projects in lieu of regular class & 6 Mar. \\
+	\reminder{Review Essay 2: Due by the end of Week Eight}{9 Mar.} \\
+		& Micah 6–7                                         & 13 Mar. \\
+		& Nahum 1–3                                         & 20 Mar. \\
+		& Habakkuk 1–2                                      & 27 Mar. \\
+	\reminder{Final Paper: Due by the end of Week Eleven}{30 Mar.} \\
+		& Habakkuk 3                                        & 3 Apr. \\
+	\bottomrule
+  \end{tabular}
+  \caption{Schedule of Readings}
+  \label{schedule}
+\end{table}
+
 See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
 
 \section{Evaluation}
