--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2018/01/03 v2.4 -- Course policy]
+\ProvidesFile{other.tex}[2018/05/25 v2.5 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -10,11 +10,8 @@ assignments are to be uploaded by 11:59 \PM\ on the date indicated.
 
 Essay submissions must be typewritten, double-spaced, and formatted as
 PDFs. They should be free from error. In this course they should follow
-either \emph{The SBL Handbook of Style} (refer to the online
-\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{
-Student Supplement}), or \emph{The Chicago Manual of Style}, per AST's
-policy for major papers. As a reminder, AST also upholds an Inclusive
-Language Policy.
+SBL Style (see \cite{sbl2} in \autoref{supplementary}, above). As a
+reminder, AST also upholds an Inclusive Language Policy.
 
 \href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{Plagiarism},
 if \href{https://www.theguardian.com/world/2013/feb/09/german-education-minister-quits-phd-plagiarism}{detected},
