--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -13,7 +13,7 @@
 
 %\onlinetrue % \Int{true}{false}
 \coursecode[1.0]{HB tk}% version is 1.0 unless \cmd[1.1]{}
-\coursetitle{tk}% optional series: \cmd[series]{}
+\coursetitle{tk}% \cmd[optional series]{title}
 
 % Taught in:
 %   - Fall 2018
@@ -24,11 +24,11 @@
 \officehours{Tuesdays, 2:00--4:00 \PM}
 
 \semester{Fall Term 2018}
-\meets{Mondays}% \meets{on}{at}{in} ; can nest \Int{Thursdays}{Tuesdays}
+\meets{On Mondays}% \meets{on}{at}{in} ; can nest \Int{Thursdays}{Tuesdays}
       {9:00--11:30 \AM}
-      {Classroom 3}
+      {TBD}
 \website{danieldriver.com/courses/}% omit http://
-\cdescription{% \cmd[special prereqs]{copy from the current Academic Calendar}
+\cdescription{% \cmd[standard prereqs]{from the current Academic Calendar}
 
 The First Testament of Christian Scripture, also called the \ldots
 
@@ -151,35 +151,48 @@ have been placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
+\begin{thebibliography}{Sommer}% use the longest item in the bibliography
 
-	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
-    Oxford / New York: Oxford University Press, 2010.
-    ISBN 978-0195289602.
+%	\bibitem[Abbrev]{citeref} Author.
+%	\emph{title}.
+%	tk: tk, 20tk.
+%	ISBN tk.
 
-	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
-	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
-	Nashville: Abingdon Press, 2015.
-	ISBN 978-1426775635.
+	\bibitem[Sommer]{sommer} Benjamin D. Sommer.
+	\emph{Revelation and Authority: Sinai in Jewish Scripture and Tradition}.
+	New Haven: Yale University Press, 2015.
+	ISBN 978-0300234688.
 
-	\bibitem[Heschel]{heschel} Abraham Heschel.
-	\emph{The Sabbath: Its Meaning for Modern Man}.
-	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
-	ISBN 978-0374529758.
+	\bibitem[Childs]{childs} Brevard S. Childs.
+	\emph{The Book of Exodus: A Critical, Theological Commentary}.
+	Louisville: Westminster John Knox Press, 1974.
+	ISBN 978-0664229689.
 
-	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
-	\emph{On the Apostolic Preaching}.
-	Trans. John Behr.
-	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
-	ISBN 978-0881411744.
+	\bibitem[von Rad]{vonrad} Gerhard von Rad.
+	\emph{Moses}. 2nd ed. Edited by K.\,C. Hanson.
+	Eugene, OR: Cascade Books, 2011.
+	ISBN 978-1606087718.
+
+	\bibitem[Nyssa]{nyssa} Gregory of Nyssa.
+	\emph{The Life of Moses}. Translated by Abraham J. Malherbe and Everett Ferguson.
+	New York: HarperCollins, 2006.
+	ISBN 978-0060754648. This title is optional but strongly recommended.
 
 \end{thebibliography}
 \endgroup
+% For easier citation below:
+\newcommand\bds[1]{\cite[#1]{sommer}}
+\newcommand\bsc[1]{\cite[#1]{childs}}
+\newcommand\gvr[1]{\cite[#1]{vonrad}}
+\newcommand\nys[1]{\cite[#1]{nyssa}}
 
-A very fine alternative study Bible is the NJPS: Adele Berlin and Marc
-Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford: Oxford University Press, 2014).
+Students should also have a good, modern translation of the Bible, such
+as the NRSV or NJPS. If you want a study Bible, I recommend either
+Michael Coogan et al., eds., \emph{The New Oxford Annotated Bible: NRSV
+with Apocrypha} (5th ed.; Oxford: OUP, 2018) or, with some superior
+notes and essays but neither Apocrypha nor NT, Adele Berlin and Marc Zvi
+Brettler, eds., \emph{The Jewish Study Bible: Second Edition} (2nd ed.;
+Oxford: OUP, 2014).
 
 \section{Supplementary Texts}
 \label{supplementary}
@@ -197,7 +210,7 @@ biblical studies alike.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{1}% use the longest item in the bibliography
+\begin{thebibliography}{9}% use the longest item in the bibliography
 
 	\bibitem{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}. 2nd ed.
@@ -207,7 +220,7 @@ biblical studies alike.
 	\emph{The SBL Handbook of Style}. 2nd ed.
 	Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
 	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
-	which is the general standard at AST, there is also a free
+	which is the standard at AST, there is also a free
 	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
 
 \end{thebibliography}
@@ -220,42 +233,36 @@ We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
 
-\newcommand\HBFB[1]{\cite[#1]{hbfb}}
-
 \setcolumncount{5}% set up \sessioncount, \unit{}, \noclass{}, and \reminder{memo}{date} macros
-\begin{table}[htbp]% set to `p' to put the schedule on its own page
+\begin{table}[htb]% set to `p' to put the schedule on its own page
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pgs)}&\textbf{Supplement (author)}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pages)}&\textbf{Supplement (author)}&\textbf{Due}\\
 	\midrule
 
-	\unit{Law / Torah / Pentateuch} \\
+%	\unit{One} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Ellen Davis           & \Int{14}{12} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Jon Levenson          & \Int{21}{19} Sep. \\
-		& Exodus 1--34         & \HBFB{65--83}   & C. Mathews McGinnis   & \Int{28}{26} Sep. \\
-		& Leviticus 1--16      & \cite[all]{heschel} & Gary Anderson     & \Int{ 5}{ 3} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & R.W.L. Moberly        & \Int{12}{10} Oct. \\ [1ex]
+		&                &                &                &  Sep. \\ % or \Int{14}{12} Sep.
+		&                &                &                &  Sep. \\
+		&                &                &                &  Sep. \\
+		&                &                &                &  Oct. \\
+		&                &                &                &  Oct. \\
+	\reminder{First paper is \textbf{due} before midnight on the fifth day of class}{} \\
+		&                &                &                &  Oct. \\
+	\noclass{Term Break (Monday to Friday)}                &  Oct. \\ [1ex]
 
-	\unit{Prophets: Former \textit{\&} Latter} \\
+%	\unit{Two} \\
 
-	\reminder{First paper is \textbf{due} before midnight on the sixth day of class}{}       \\
-		& Joshua, Judges       & \HBFB{103--121} & Phyllis Trible        & \Int{19}{17} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--143} & Stephen Chapman       & \Int{26}{24} Oct. \\
-	\noclass{Term Break (Monday to Friday)}                              & \Int{2 Nov.}{31 Oct.} \\
-		& 1 \& 2 Kings         & \cite[all]{irenaeus} & Robert Alter     & \Int{ 9}{ 7} Nov. \\ [1ex]
+		&                &                &                &  Nov. \\
+		&                &                &                &  Nov. \\
+		&                &                &                &  Nov. \\
+		&                &                &                &  Nov. \\
+		&                &                &                &  Dec. \\
+	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{} \\
+		&                &                &                &  Dec. \\ [1ex]
 
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & Brevard Childs        & \Int{16}{14} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Christopher Seitz     & \Int{23}{21} Nov. \\ [1ex]
-
-	\unit{Writings: Wisdom \textit{\&} Praise} \\
-
-	\reminder{Second paper is \textbf{due} before midnight on the eleventh day of class}{}   \\
-		& Psalms 1--8, 90, 110, 118 & \HBFB{187--202} & Gerald Sheppard  & \Int{30}{28} Nov. \\
-		& Ecclesiastes         & \HBFB{203--246} & Katharine Dell        & \Int{ 7}{ 5} Dec. \\ [1ex]
-
-	\reminder{End of Term: Final marks are due for all courses}{15 Dec.} \\
+	\reminder{End of Term: Final marks are due for all courses}{ Dec.} \\
 
 	\bottomrule
   \end{tabular}
