smooth out some syntax

--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,9 +1,10 @@
-\ProvidesFile{grades.tex}[2017/12/19 v2.3 -- Course policy]
+\ProvidesFile{grades.tex}[2018/05/28 v2.4 -- Course policy]
 
 AST's \href{http://www.astheology.ns.ca/students/resources.html}{Academic
-Calendar} provides guidelines and detailed criteria for academic assessment.
-Marks are assigned by letter grade (see \autoref{grade-syst}) using these
-benchmarks. Note that, at AST, a grade of ``C'' is deemed ``Unsatisfactory.''
+Calendar} provides guidelines and detailed criteria for academic
+assessment. Marks are assigned by letter grade using these benchmarks
+(summarized in \autoref{grade-syst}). Note that, at AST, a grade of
+``C'' is deemed ``Unsatisfactory.''
 
 \begin{table}[htbp]
  \centering
