outline some basic (and fairly standard) assignments

--- a/HB/HB 3115-Exodus and Moses.tex
+++ b/HB/HB 3115-Exodus and Moses.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[1.0]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
+\coursecode[0.6-DRAFT]{HB 3115}% version is 1.0 unless \cmd[1.1]{}
 \coursetitle{Exodus and the Life of Moses}% \cmd[optional series]{title}
 
 % Taught in:
@@ -164,15 +164,15 @@ have been placed on a 2-hour reserve.
 %	tk: tk, 20tk.
 %	ISBN tk.
 
-	\bibitem[Sommer]{sommer} Benjamin D. Sommer.
-	\emph{Revelation and Authority: Sinai in Jewish Scripture and Tradition}.
-	New Haven: Yale University Press, 2015.
-	ISBN 978-0300234688.
-
 	\bibitem[Childs]{childs} Brevard S. Childs.
 	\emph{The Book of Exodus: A Critical, Theological Commentary}.
 	Louisville: Westminster John Knox Press, 1974.
 	ISBN 978-0664229689.
+
+	\bibitem[Sommer]{sommer} Benjamin D. Sommer.
+	\emph{Revelation and Authority: Sinai in Jewish Scripture and Tradition}.
+	New Haven: Yale University Press, 2015.
+	ISBN 978-0300234688.
 
 	\bibitem[von Rad]{vonrad} Gerhard von Rad.
 	\emph{Moses}. 2nd ed. Edited by K.\,C. Hanson.
@@ -181,16 +181,11 @@ have been placed on a 2-hour reserve.
 
 	\bibitem[Nyssa]{nyssa} Gregory of Nyssa.
 	\emph{The Life of Moses}. Translated by Abraham J. Malherbe and Everett Ferguson.
-	New York: HarperCollins, 2006.
+	San Francisco: HarperSanFrancisco, 2006.
 	ISBN 978-0060754648. This title is optional but strongly recommended.
 
 \end{thebibliography}
 \endgroup
-% For easier citation below:
-\newcommand\bds[1]{\cite[#1]{sommer}}
-\newcommand\bsc[1]{\cite[#1]{childs}}
-\newcommand\gvr[1]{\cite[#1]{vonrad}}
-\newcommand\nys[1]{\cite[#1]{nyssa}}
 
 Students should also have a good, modern translation of the Bible, such
 as the NRSV or NJPS. If you want a study Bible, I recommend either
@@ -235,6 +230,12 @@ biblical studies alike.
 \section{Course Outline}
 \label{outline}
 
+% For ease of citation:
+\newcommand\bsc[1]{\cite[#1]{childs}}
+\newcommand\bds[1]{\cite[#1]{sommer}}
+\newcommand\gvr[1]{\cite[#1]{vonrad}}
+\newcommand\nys[1]{\cite[#1]{nyssa}}
+
 We will adhere to the schedule in \autoref{schedule} as closely as
 possible, though the professor reserves the right to adjust it to suit
 the needs of the class.
@@ -244,28 +245,29 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }lllr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary (chapters)}&\textbf{Secondary (pages)}&\textbf{Supplement (author)}&\textbf{Due}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary}&\textbf{Commentary}&\textbf{Secondary}&\textbf{Due}\\
 	\midrule
 
 %	\unit{One} \\
 
-		&                &                &                &  2 Jul. \\ % or \Int{14}{12} Sep.
-		&                &                &                &  3 Jul. \\
-		&                &                &                &  4 Jul. \\
-		&                &                &                &  5 Jul. \\
-	\reminder{First paper is \textbf{due} before midnight on the fourth day of class}{} \\
-		&                &                &                &  6 Jul. \\ [1ex]
+		& Exodus 1--2  & \bsc{Intros} &               &  2 Jul. \\ % or \Int{14}{12} Sep.
+		& Exodus 3     & \bsc{IV}     & \gvr{1–44}    &  3 Jul. \\
+		& Exodus 7     & \bsc{VII}    & \gvr{45–87}   &  4 Jul. \\
+	\reminder{First paper is \textbf{due} by midnight on day three}{} \\
+		& Exodus 12    & \bsc{VIII}   &               &  5 Jul. \\
+		& Exodus 16    & \bsc{XII}    & \bds{1–26}    &  6 Jul. \\ [1ex]
 
-	\noclass{Term Break (Saturday \& Sunday)}              &         \\ [1ex]
+	\noclass{Term Break (Saturday \& Sunday)}         &         \\ [1ex]
 
-		&                &                &                &  9 Jul. \\
-		&                &                &                & 10 Jul. \\
-		&                &                &                & 11 Jul. \\
-		&                &                &                & 12 Jul. \\
-	\reminder{Second paper is \textbf{due} before midnight on the ninth day of class}{} \\
-		&                &                &                & 13 Jul. \\ [1ex]
+		& Exodus 19    & \bsc{XVI}    & \bds{27–98}   &  9 Jul. \\
+	\reminder{Second paper is \textbf{due} by midnight on day six}{} \\
+		& Exodus 24    & \bsc{XIX}    & \bds{99–187}  & 10 Jul. \\
+		& Exodus 32    & \bsc{XXI}    & \bds{188–251} & 11 Jul. \\
+		& Exodus 33    & \bsc{XXII}   & \nys{1–68}    & 12 Jul. \\
+	\reminder{Final paper is \textbf{due} before the start of the last class}{} \\
+		& Exodus 34    & \bsc{XXIII}  & \nys{69–132}  & 13 Jul. \\ [1ex]
 
-	\reminder{End of Term: Final marks are due for all courses}{27 Jul.} \\
+	\reminder{End of Term: Final marks are due for this course}{27 Jul.} \\
 
 	\bottomrule
   \end{tabular}
@@ -307,59 +309,48 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 
 \begin{enumerate}
 
-	\item I will set \textbf{reading prompts} throughout the semester.
-	They are designed to ensure that you have read the assigned material
-	carefully, and to help you explore its significance. Prompt
-	responses submitted online should be between 250 and 300 words long.
+	\item A \textbf{book review} will facilitate student reflection on a
+	work of biblical interpretation, in this case by \cite{vonrad}. Note
+	that a book review is not the same thing as a book report. At least
+	half of this paper should be devoted to analysis and evaluation. Its
+	total length should be 1,000 words, and it is due on the third day
+	of class.
 
-%	\item Students are to \textbf{memorize ten verses from the Psalms}
-%	in the King James Version and recite them to me privately by the
-%	last day of class. You may select ten verses from one psalm, one
-%	verse from ten psalms, or any combination in between.
+	\item An \textbf{exegetical essay} will facilitate direct engagement
+	with the biblical text. The first task is to identify an appropriate
+	text. Select a suitably short passage from Exodus. Then, conduct an
+	analysis and explication of it. Interact with \cite{childs} and at
+	least one other commentator as you work, but be sure not to loose
+	sight of the text itself. The paper should be 1,500 words long, and
+	it is due on the sixth day of class.
 
-	\item Two \textbf{short papers} will facilitate student reflection
-	on two extended works of biblical interpretation, one by
-	\cite{heschel} and one by \cite{irenaeus}. Each should be 3,000
-	words long. They are due on the sixth and eleventh days of class,
-	respectively.
+	\item A \textbf{final paper} gives students an opportunity to
+	develop their own answer to the question “Who is Moses?” The paper
+	must have a clear thesis, which should govern the entire discussion.
+	The paper should also show an awareness of all assigned readings and
+	any relevant lectures and classroom discussions. It should be 2,000
+	words long, and it is due at the start of the last class.
 
-	\begin{enumerate}
-
-		\item The \textbf{first paper} will articulate and evaluate
-		multiple rationales for sabbath observance by interacting with
-		biblical and post-biblical traditions. The latter must include,
-		but need not be limited to, Heschel's \emph{The Sabbath}.
-
-		\item The \textbf{second paper} will explore Irenaeus' use of
-		the Old Testament as Christian scripture by: succinctly
-		summarizing \emph{On the Apostolic Preaching}, selecting a
-		characteristic example of biblical interpretation in that work,
-		and then developing and defending a coherent thesis about that
-		instance of interpretation.
-
-	\end{enumerate}
-
-\Int{
-	\item Each student will \textbf{make an online presentation} \ldots
-}{
-	\item Each student will \textbf{lead a seminar} on \ldots
-}
+%\Int{
+%	\item Each student will \textbf{make an online presentation} \ldots
+%}{
+%	\item Each student will \textbf{lead a seminar} on \ldots
+%}
 
 \end{enumerate}
 
-The breakdown for the semester's total work is shown in
-\autoref{grade-dist}.
+For guidance on how to approach these and other assignments, see
+\cite{rlgs} in \autoref{supplementary}, above. The breakdown for the
+semester's total work is shown in \autoref{grade-dist}.
 
 \begin{table}[htbp]
   \centering
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts & 25\% \\
-%    Memorization    & 10\% \\
-    First Paper     & 25\% \\
-    Second Paper    & 25\% \\
-    \Int{Online}{Seminar} Presentation & 25\% \\
+    Book Review      & 25\% \\
+    Exegetical Essay & 35\% \\
+    Final Thesis     & 40\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
